# web-agent

./: .env.example  .gcloudignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile.cloudrun  Dockerfile.devtools  Dockerfile.kernel-cloud  Dockerfile.local  Makefile  Readme.md  TEST_RESULTS.md  TRACING_DEBUG.md  TRACING_ROOT_CAUSE.md  WEB_AGENT_ANALYSIS.md  build-local.sh  cloudbuild.yaml  cloudrun-kernel-wrapper.sh  cloudrun-wrapper.sh  deploy.sh  docker-compose.yml  eval-server-start.js  nginx-devtools-cloudrun.conf  nginx.conf  run-local.sh  service-secrets.yaml  service.yaml  squid.conf  start-chromium-cloudrun.sh  supervisord-cloudrun.conf  test-eval-server.sh
evals/: .env.example  .gitignore  CLAUDE.md  README.md  config.example.anthropic.yml  config.example.cerebras.yml  config.example.google.yml  config.example.openai.yml  config.example.openrouter-gemini.yml  config.example.openrouter-gpt.yml  config.litellm.example.yml  config.yml  eval_builder_snapshots.py  list_gitlab_tasks.py  list_shopping_tasks.py  login_webarena_sites.py  pyproject.toml  requirements.txt  run.py  run_action_agent.py  run_gitlab_tasks.py  run_oneshop_test.sh  run_shopping_tasks.py  run_test_simple.py  run_webarena.py  test-tracing.sh  test_vision_judge.py  test_webarena_integration.py  test_webarena_live.py
evals/lib/: __init__.py  api_client.py  config_loader.py  eval_loader.py  judge.py  webarena_adapter.py  webarena_evaluators.py
evals/native/: run.py  test_vision_judge.py
evals/reports/: gitlab_tasks_results.json  shopping_tasks_results.json
evals/webarena/: list_gitlab_tasks.py  (+8 more)
(+197 files in other folders)
